apps/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: paperless
    pod-security.kubernetes.io/enforce: restricted
