apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-oidc@kubernetescrd
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: paperless.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  name: http
